Fixed alignment, color, aspect and padding issues, also redone the info icon

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,13 @@
     border-color: #D9D9D9;
 }
 
+.fa-info {
+    color:grey;
+    border: 1px solid grey;
+    padding: 4px 10px;
+    border-radius: 15px;
+}
+
 body {
     display: flex;
     justify-content: center;    
@@ -198,11 +205,7 @@ a {
     display: flex;
     align-items: center;
     height: 100%;
-}
-
-.navlinks ul li  {
     border-top: transparent 3px solid;
-
 }
 
 .navlinks ul li:hover  {
@@ -327,6 +330,7 @@ a {
   width: 100%;
   border-radius: 20px 20px 0px 0px;
   aspect-ratio: auto;
+  object-fit: cover;
 }
 
 .MarseilleActivitesName {  
@@ -447,11 +451,6 @@ a {
         padding-right: 0px;
     }
 
-    .navlinks ul li {
-        width: 50%;
-        border-top: 0;
-    }
-
     .navlinks ul li:hover {
         border-bottom: 3px solid #0065FC;
         border-top: 0;
@@ -516,14 +515,10 @@ a {
         padding-bottom: 0;
     }
 
-    .hebergements section {
-        background-color: white;
-    }
 
     .hebergements-and-populaires section {
         border-radius: 0;
         box-sizing: border-box;
-        background-color: var(--main-bg-color);
     }
 
     .hebergements-and-populaires {
@@ -593,6 +588,9 @@ a {
         align-items: center;
         height: 100%;
         border-top: none;
+        width: 50%;
+        border-top: none;
+        border-bottom: 3px solid transparent;
     }
     
     .navlinks ul li:hover  {
@@ -623,5 +621,14 @@ a {
         display: flex;
         flex-direction: column;
         padding: 30px;
+    }
+
+    .FooterPart {
+        padding: 0px;
+        padding-bottom: 20px;
+    }
+
+    .SpanInd {
+        text-indent: -9999px;
     }
 }
